--- a/src/org/oop/view/Agenda.form
+++ b/src/org/oop/view/Agenda.form
@@ -8,13 +8,13 @@
     <properties/>
     <border type="none"/>
     <children>
-      <splitpane id="e6c03">
+      <splitpane id="e6c03" binding="splitpane">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <dividerLocation value="17"/>
-          <dividerSize value="0"/>
+          <dividerSize value="2"/>
         </properties>
         <border type="none"/>
         <children>
