--- a/src/org/oop/view/Agenda.form
+++ b/src/org/oop/view/Agenda.form
@@ -13,26 +13,122 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <dividerLocation value="17"/>
+          <dividerLocation value="113"/>
           <dividerSize value="2"/>
         </properties>
         <border type="none"/>
         <children>
-          <scrollpane id="62701" binding="sidebarpanel">
+          <scrollpane id="62701" binding="sidebarpane">
             <constraints>
               <splitpane position="left"/>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-3355393"/>
+            </properties>
             <border type="none"/>
-            <children/>
+            <children>
+              <grid id="de1a0" binding="sidebarpanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
+                <constraints/>
+                <properties>
+                  <background color="-3355444"/>
+                </properties>
+                <border type="none"/>
+                <children>
+                  <component id="443b8" class="javax.swing.JButton" binding="addinsbutton">
+                    <constraints>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Aggiungi"/>
+                    </properties>
+                  </component>
+                  <vspacer id="f92a2">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                  </vspacer>
+                </children>
+              </grid>
+            </children>
           </scrollpane>
-          <scrollpane id="51304" binding="activitypanel">
+          <scrollpane id="51304" binding="activitypane">
             <constraints>
               <splitpane position="right"/>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-1"/>
+            </properties>
             <border type="none"/>
-            <children/>
+            <children>
+              <grid id="fc1e7" binding="activitypanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="5" left="5" bottom="5" right="5"/>
+                <constraints/>
+                <properties>
+                  <background color="-258"/>
+                </properties>
+                <border type="none"/>
+                <children>
+                  <component id="c371a" class="javax.swing.JLabel" binding="insegnamentolabel">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Nome insegnamento"/>
+                    </properties>
+                  </component>
+                  <component id="39d0d" class="javax.swing.JLabel" binding="durataciclolabel">
+                    <constraints>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Periodo ciclo"/>
+                    </properties>
+                  </component>
+                  <grid id="567ed" binding="activitieslist" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                    <margin top="5" left="5" bottom="5" right="5"/>
+                    <constraints>
+                      <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <background color="-6710887"/>
+                    </properties>
+                    <border type="none"/>
+                    <children>
+                      <component id="e8363" class="javax.swing.JButton" binding="lezioneButton" default-binding="true">
+                        <constraints>
+                          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="+ Lezione"/>
+                        </properties>
+                      </component>
+                      <vspacer id="ce95f">
+                        <constraints>
+                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                      </vspacer>
+                      <component id="d0472" class="javax.swing.JButton" binding="laboratorioButton" default-binding="true">
+                        <constraints>
+                          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="+ Laboratorio"/>
+                        </properties>
+                      </component>
+                      <component id="49c5b" class="javax.swing.JButton" binding="esameButton" default-binding="true">
+                        <constraints>
+                          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="+ Esame"/>
+                        </properties>
+                      </component>
+                    </children>
+                  </grid>
+                </children>
+              </grid>
+            </children>
           </scrollpane>
         </children>
       </splitpane>
