--- a/src/org/oop/view/Attivita.form
+++ b/src/org/oop/view/Attivita.form
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.oop.view.Attivita">
-  <grid id="27dc6" binding="activity" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="15" left="15" bottom="15" right="15"/>
+  <grid id="27dc6" binding="activity" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="15" left="15" bottom="4" right="4"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
     <properties>
-      <background color="-3355444"/>
+      <background color="-1"/>
       <enabled value="false"/>
     </properties>
-    <border type="none"/>
+    <border type="line">
+      <color color="-16777216"/>
+    </border>
     <children>
       <component id="d157" class="javax.swing.JLabel" binding="activityname">
         <constraints>
@@ -23,15 +25,23 @@
       </component>
       <vspacer id="8ec9b">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
       <component id="84bc1" class="javax.swing.JLabel" binding="teachername">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Professore"/>
+        </properties>
+      </component>
+      <component id="ffbf9" class="javax.swing.JButton" binding="editbutton">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Modifica"/>
         </properties>
       </component>
     </children>
