--- a/src/org/oop/view/Attivita.form
+++ b/src/org/oop/view/Attivita.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.oop.view.Attivita">
-  <grid id="27dc6" binding="activity" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="activitypanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="15" left="15" bottom="4" right="4"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
