--- a/src/org/oop/view/Agenda.form
+++ b/src/org/oop/view/Agenda.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="agendapanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="30" y="19" width="713" height="480"/>
     </constraints>
     <properties>
       <background color="-1907998"/>
@@ -31,17 +31,20 @@
             </properties>
             <border type="none"/>
             <children>
-              <grid id="de1a0" binding="sidebarpanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="0" bottom="0" right="0"/>
+              <grid id="de1a0" binding="sidebarpanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="15" left="7" bottom="14" right="0"/>
                 <constraints/>
                 <properties>
-                  <background color="-3355444"/>
+                  <background color="-1907998"/>
                 </properties>
-                <border type="none"/>
+                <border type="none">
+                  <title-color color="-16777216"/>
+                  <color color="-8487298"/>
+                </border>
                 <children>
                   <component id="443b8" class="javax.swing.JButton" binding="addinsbutton">
                     <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value="Aggiungi"/>
@@ -49,9 +52,18 @@
                   </component>
                   <vspacer id="f92a2">
                     <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                     </constraints>
                   </vspacer>
+                  <component id="8659a" class="javax.swing.JLabel" binding="sidebartitle">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <font size="14" style="1"/>
+                      <text value="Elenco insegnamenti"/>
+                    </properties>
+                  </component>
                 </children>
               </grid>
             </children>
@@ -88,7 +100,7 @@
                   <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <background color="-6710887"/>
+                  <background color="-1907998"/>
                 </properties>
                 <border type="none">
                   <title-color color="-16777216"/>
@@ -105,7 +117,7 @@
                         <margin top="40" left="40" bottom="40" right="40"/>
                         <constraints/>
                         <properties>
-                          <background color="-6710887"/>
+                          <background color="-395273"/>
                         </properties>
                         <border type="none"/>
                         <children/>
