--- a/src/org/oop/view/Profilo.form
+++ b/src/org/oop/view/Profilo.form
@@ -3,19 +3,63 @@
   <grid id="27dc6" binding="profilopanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="1105" height="578"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <component id="2ad2d" class="javax.swing.JLabel" binding="text">
+      <splitpane id="f1e98" binding="splitpane">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="200" height="200"/>
+          </grid>
         </constraints>
         <properties>
-          <text value="Ho aperto il panello profilo"/>
+          <background color="-1907998"/>
+          <dividerLocation value="200"/>
+          <dividerSize value="0"/>
         </properties>
-      </component>
+        <border type="none"/>
+        <children>
+          <grid id="f92f6" binding="sidebarpanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="15" left="7" bottom="0" right="0"/>
+            <constraints>
+              <splitpane position="left"/>
+            </constraints>
+            <properties>
+              <background color="-1907998"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="25aa5" class="javax.swing.JLabel" binding="sidebartitle">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <font size="14" style="1"/>
+                  <text value="Riepilogo informazioni"/>
+                </properties>
+              </component>
+              <vspacer id="465ef">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </vspacer>
+            </children>
+          </grid>
+          <grid id="2b50f" binding="librettopanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <splitpane position="right"/>
+            </constraints>
+            <properties>
+              <background color="-1907998"/>
+            </properties>
+            <border type="none"/>
+            <children/>
+          </grid>
+        </children>
+      </splitpane>
     </children>
   </grid>
 </form>
