--- a/src/org/oop/view/Profilo.form
+++ b/src/org/oop/view/Profilo.form
@@ -47,7 +47,7 @@
               </vspacer>
             </children>
           </grid>
-          <grid id="2b50f" binding="librettopanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="2b50f" binding="librettopanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <splitpane position="right"/>
@@ -56,7 +56,40 @@
               <background color="-1907998"/>
             </properties>
             <border type="none"/>
-            <children/>
+            <children>
+              <component id="42ed8" class="javax.swing.JButton" binding="addriga">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Aggiungi"/>
+                </properties>
+              </component>
+              <scrollpane id="de599">
+                <constraints>
+                  <grid row="0" column="1" row-span="2" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="729bc" class="javax.swing.JTable" binding="table1" default-binding="true">
+                    <constraints/>
+                    <properties/>
+                    <clientProperties>
+                      <JTable.autoStartsEdit class="java.lang.Boolean" value="false"/>
+                    </clientProperties>
+                  </component>
+                </children>
+              </scrollpane>
+              <component id="d230b" class="javax.swing.JButton" binding="deleteriga">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Elimina"/>
+                </properties>
+              </component>
+            </children>
           </grid>
         </children>
       </splitpane>
