--- a/src/org/oop/view/FormRegistrazione.form
+++ b/src/org/oop/view/FormRegistrazione.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.oop.view.FormModuli">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.oop.view.FormRegistrazione">
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
@@ -13,7 +13,7 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Anno Di Corso:"/>
+          <text value="Cognome"/>
         </properties>
       </component>
       <component id="e7887" class="javax.swing.JLabel">
@@ -21,7 +21,7 @@
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Corso di Laurea:"/>
+          <text value="Matricola"/>
         </properties>
       </component>
       <component id="352a6" class="javax.swing.JLabel">
@@ -29,7 +29,7 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Cfu Ottenuti"/>
+          <text value="Corso Di Laurea"/>
         </properties>
       </component>
       <component id="12d97" class="javax.swing.JLabel">
@@ -37,10 +37,10 @@
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Anno Accademico"/>
+          <text value="Email"/>
         </properties>
       </component>
-      <component id="3c22" class="javax.swing.JTextField" binding="annocorso">
+      <component id="3c22" class="javax.swing.JTextField" binding="cognome">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -50,7 +50,7 @@
           <name value=""/>
         </properties>
       </component>
-      <component id="ea46f" class="javax.swing.JTextField" binding="corsolaurea">
+      <component id="ea46f" class="javax.swing.JTextField" binding="matricola">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -58,7 +58,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="a449e" class="javax.swing.JTextField" binding="annoaccademico">
+      <component id="a449e" class="javax.swing.JTextField" binding="email">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -71,7 +71,7 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Stato Esami"/>
+          <text value="Nome"/>
         </properties>
       </component>
       <component id="7b42c" class="javax.swing.JButton" binding="Submit">
@@ -90,7 +90,7 @@
           <text value="Quit"/>
         </properties>
       </component>
-      <component id="c9eec" class="javax.swing.JTextField" binding="cfuottenuti">
+      <component id="c9eec" class="javax.swing.JTextField" binding="corsodilaurea">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -98,7 +98,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="395de" class="javax.swing.JTextField" binding="statoesami">
+      <component id="395de" class="javax.swing.JTextField" binding="nome">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
