--- a/src/org/oop/view/Immatricolazione.form
+++ b/src/org/oop/view/Immatricolazione.form
@@ -8,16 +8,27 @@
     <properties/>
     <border type="none"/>
     <children>
-      <hspacer id="2688b">
+      <component id="30cd3" class="javax.swing.JButton" binding="submit">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
-      </hspacer>
-      <vspacer id="dbe32">
+        <properties>
+          <text value="Submit"/>
+        </properties>
+      </component>
+      <vspacer id="b6b2b">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
+      <component id="433d8" class="javax.swing.JButton" binding="quit">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Quit"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
