--- a/src/org/oop/view/FormRegistrazione.form
+++ b/src/org/oop/view/FormRegistrazione.form
@@ -24,14 +24,6 @@
           <text value="Matricola"/>
         </properties>
       </component>
-      <component id="352a6" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Corso di Laurea"/>
-        </properties>
-      </component>
       <component id="12d97" class="javax.swing.JLabel">
         <constraints>
           <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -106,14 +98,6 @@
           <text value="Compila i campi per creare un nuovo utente e cominciare ad utilizzare Studeasy"/>
         </properties>
       </component>
-      <component id="5d1a5" class="javax.swing.JList" binding="corsiList">
-        <constraints>
-          <grid row="5" column="1" row-span="1" col-span="3" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="227c" class="javax.swing.JRadioButton" binding="triennaleRadioButton" default-binding="true">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -136,6 +120,27 @@
         </constraints>
         <properties>
           <text value="Ciclo Unico"/>
+        </properties>
+      </component>
+      <scrollpane id="ef58f">
+        <constraints>
+          <grid row="5" column="1" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="5d1a5" class="javax.swing.JList" binding="corsiList">
+            <constraints/>
+            <properties/>
+          </component>
+        </children>
+      </scrollpane>
+      <component id="352a6" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Corso di Laurea"/>
         </properties>
       </component>
     </children>
