--- a/src/org/oop/view/Tesi.form
+++ b/src/org/oop/view/Tesi.form
@@ -88,7 +88,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="bbd38" class="javax.swing.JFormattedTextField" binding="dataNascita">
+      <component id="bbd38" class="javax.swing.JFormattedTextField" binding="dataNascita" custom-create="true">
         <constraints>
           <grid row="3" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="250" height="20"/>
